--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.JS Functional Boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -29,8 +29,11 @@
   "homepage": "https://github.com/zrpaplicacoes/node-functional-boilerplate#readme",
   "dependencies": {
     "awilix": "^4.2.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "sanctuary": "^2.0.0"
+    "morgan": "^1.9.1",
+    "sanctuary": "^2.0.0",
+    "sanctuary-def": "^0.20.0"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
