--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   },
   "homepage": "https://github.com/zrpaplicacoes/node-functional-boilerplate#readme",
   "dependencies": {
+    "apollo-server-express": "^2.8.2",
     "awilix": "^4.2.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "graphql-import": "^0.7.1",
     "morgan": "^1.9.1",
     "sanctuary": "^2.0.0",
     "sanctuary-def": "^0.20.0"
