--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
     "awilix": "^4.2.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "graphql": "^14.4.2",
     "graphql-import": "^0.7.1",
-    "morgan": "^1.9.1",
-    "sanctuary": "^2.0.0",
-    "sanctuary-def": "^0.20.0"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
