--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "graphql-import": "^0.7.1",
+    "mongoose": "^5.6.10",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
