--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "apollo-server-express": "^2.8.2",
     "awilix": "^4.2.2",
     "body-parser": "^1.19.0",
+    "crocks": "^0.12.3",
     "cross-env": "^5.2.0",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "graphql-import": "^0.7.1",
     "mongoose": "^5.6.10",
-    "morgan": "^1.9.1",
-    "ramda": "^0.26.1"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
