--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node",
     "boilerplate",
     "functional",
+    "DDD",
     "javascript",
     "zrp"
   ],
@@ -35,27 +36,25 @@
   },
   "homepage": "https://github.com/zrpaplicacoes/node-functional-boilerplate#readme",
   "dependencies": {
-    "@hapi/joi": "^15.1.1",
-    "apollo-server-express": "^2.8.2",
-    "awilix": "^4.2.2",
+    "apollo-server-express": "^2.10.1",
+    "awilix": "^4.2.4",
     "body-parser": "^1.19.0",
-    "crocks": "^0.12.3",
-    "cross-env": "^5.2.0",
+    "crocks": "^0.12.4",
+    "cross-env": "^5.2.1",
     "express": "^4.17.1",
-    "graphql": "^14.4.2",
+    "graphql": "^14.6.0",
     "graphql-import": "^0.7.1",
-    "mongoose": "^5.6.10",
+    "mongoose": "^5.9.2",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "@types/joi": "^14.3.3",
-    "eslint": "^6.1.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-fp": "^2.3.0",
-    "eslint-plugin-import": "^2.18.2",
-    "husky": "^3.0.4",
+    "eslint-plugin-import": "^2.20.1",
+    "husky": "^3.1.0",
     "jest": "^24.9.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.4"
   },
   "jest": {
     "coverageReporters": [
