chore: rename .env.example to .example.env

--- a/.example.env
+++ b/.example.env
@@ -7,4 +7,5 @@ CORS_METHODS=GET, POST, PUT, OPTIONS, PATCH, DELETE
 CORS_ORIGIN=*
 MONGO_DB_URL=mongodb://mongo:27017/application
 NODE_ENV=development
+NODE_PATH=.
 PORT=3000
