--- a/.gitignore
+++ b/.gitignore
@@ -67,8 +67,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.test
+*.env
+!*example.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
