chore: add support for debugging with vscode (docker:attach and local:launch)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,41 @@
 version: "3.8"
 
+networks:
+  bridge:
+    driver: bridge
+    name: local
+
 volumes:
   mongo-data:
 
 services:
   app:
+    image: zrp/node-functional-boilerplate:nightly
+    container_name: app
+    hostname: app
+    networks:
+      - bridge
     build:
       context: .
       target: development
       args:
         APP_PATH: /home/node/app
-    env_file: .env.example
-    stdin_open: true
-    tty: true
+    env_file: .docker.env
+    command: npm run debug
     volumes:
       - ./:/home/node/app
       - /home/node/app/node_modules
     ports:
       - 3000:3000
-      - 9229
+      - 9229:9229
     depends_on:
-      - mongo-db
+      - mongo
   
-  mongo-db:
+  mongo:
+    container_name: mongo
     hostname: mongo
+    networks:
+      - bridge
     image: mongo
     restart: always
     volumes:
