--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles --forceExit",
     "coverage": "NODE_ENV=test jest --runInBand --coverage --forceExit",
     "tdd": "NODE_ENV=test jest --runInBand --watchAll",
-    "lint": "eslint . --ext .js --ignore-path .eslintignore; exit 0",
-    "lint:fix": "eslint . --ext .js --ignore-path .eslintignore --fix; exit 0"
+    "lint": "eslint . --ext .js --ignore-path .eslintignore",
+    "lint:fix": "eslint . --ext .js --ignore-path .eslintignore --fix"
   },
   "dependencies": {
     "apollo-server-express": "^2.19.0",
