--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,6 @@ jobs:
 
     - run: npm install
     - run: npm run build --if-present
-    - run: npm test
+    - run: NODE_PATH=. npm test
       env:
         CI: true
