--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-import-resolver-node": "^0.3.4",
+    "eslint-plugin-disable": "^2.0.1",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6"
