feat: use env-var to required envoriment variables and run validations on each value

--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,5 @@
-APOLLO_INSTROSPECTION=true
-APOLLO_PLAYGROUND=true
+APOLLO_INSTROSPECTION=1
+APOLLO_PLAYGROUND=1
 APOLLO_ROUTE=graphql
 CORS_EXPOSE_HEADERS=x-ws-token
 CORS_HEADERS=Origin, X-Requested-With, Content-Type, Accept, Authorization
