--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "awilix": "^4.2.7",
     "body-parser": "^1.19.0",
     "crocks": "^0.12.4",
+    "env-var": "^7.0.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "graphql-import": "^1.0.0",
