--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "apollo-server-express": "^2.19.0",
     "awilix": "^4.2.7",
     "body-parser": "^1.19.0",
+    "chance": "^1.1.7",
     "crocks": "^0.12.4",
     "env-var": "^7.0.0",
     "express": "^4.17.1",
