--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
+    "factory-bot": "^6.2.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6"
