--- a/.example.env
+++ b/.example.env
@@ -8,4 +8,7 @@ CORS_ORIGIN=*
 MONGO_DB_URL=mongodb://mongo:27017/application
 NODE_ENV=development
 NODE_PATH=.
+SLACK_WEBHOOK_CHANNEL=dummy
+SLACK_WEBHOOK_URL=http://example.com
+MACHINE_HOST=NODE_FUNCTIONAL_BOILERPLATE
 PORT=3000
