feat(root.router.js): added Helmet

--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "graphql-import": "^1.0.0",
+    "helmet": "^4.2.0",
+    "http-status": "^1.5.0",
     "mongoose": "^5.10.16",
     "morgan": "^1.10.0",
     "superstruct": "^0.12.1",
