--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "factory-bot": "6.1.4",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
+    "jest-diff": "^26.6.2",
     "nodemon": "^2.0.6"
   },
   "config": {
