--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "env-var": "^7.0.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
+    "graphql-import": "^1.0.2",
     "helmet": "^4.2.0",
     "http-status": "^1.5.0",
     "mongoose": "^5.11.0",
