--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ networks:
 
 volumes:
   mongo-data:
+  node-modules-cache:
 
 services:
   app:
@@ -24,7 +25,7 @@ services:
     command: npm run debug
     volumes:
       - ./:/home/node/app
-      - /home/node/app/node_modules
+      - node-modules-cache:/home/node/app/node_modules
     ports:
       - 3000:3000
       - 9229:9229
