--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "apollo-server-express": "^2.19.0",
     "awilix": "^4.3.0",
     "body-parser": "^1.19.0",
+    "chance": "^1.1.7",
     "crocks": "^0.12.4",
     "env-var": "^7.0.0",
     "express": "^4.17.1",
@@ -63,8 +64,10 @@
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
+    "factory-bot": "6.1.4",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
+    "jest-diff": "^26.6.2",
     "nodemon": "^2.0.6"
   },
   "config": {
