feat: [ci-skip] WIP: Use mongo with more than one database using the same connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
     restart: always
     volumes:
       - mongo-data:/data/db
+    ports:
+      - 27017:27017
     healthcheck:
       test: echo 'db.runCommand({serverStatus:1}).ok' | mongo admin --quiet | grep 1
       interval: 5s
